cleaning up garbage, improving animation

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="col one">
           <img src="./img/CBET-Logo.png" alt="CBET" width="740" height="729" id="logo-v">
         </div>
-        <div class="col two">
+        <div class="col two clear">
           <h4><article id="link4">ЗАВОД МИКРОМАШИНОСТРОЕНИЯ. ЭВМ(1-ИМ.Л) <br> <b>С</b>верхскоростной <b>В</b>ычислительный эл<b>Е</b>ктронный <b>Т</b>ерминал  (СВЕТ)</article></h4>
           <span>----------------------------------------</span> <br>
           <span>СВЕТ мод. 1.0.0</span>
@@ -29,7 +29,7 @@
         </div>
       </header>
 
-      <nav class="site clear">
+      <nav class="site">
         <ul>
           <li><a href="https://ru.wikipedia.org/wiki/%D0%A5%D0%B0%D0%B9%D0%BD%D0%BB%D0%B0%D0%B9%D0%BD,_%D0%A0%D0%BE%D0%B1%D0%B5%D1%80%D1%82" target="_blank" title="WIKI">РОБЕРТ ХАЙНЛАЙН</a></li>
           <li><a href="https://epizodsspace.airbase.ru/bibl/v_s/1977/1/pasynki1.html" target="_blank" title="читать полностью">Пасынки Вселенной</a></li>
@@ -47,13 +47,13 @@
             <a class="link3" href="#link3">Часть 3</a>
           </li>
           <li>
-            <a class="link5" href="#link5">Таблица</a>
+            <a class="link5" href="#link5">С<i>e</i>тка <b>.</b>.|</a>
           </li>
         </ul>
       </div>
       <div class="right">
-        <div style="margin-left: 60%;"><q><small><i>Экспедиция к Проксиме Центавра, организованная Фондом Джордана в 2119 году, была первой в истории попыткой достичь ближайших звезд нашей Галактики. О судьбе, постигшей экспедицию, можно только догадываться...</i></small> <br>
-        <small>Фрэнк Бак. Романтики современной астрографии, изд-во Люкс Лимитед</small></q></div>
+        <div style="margin-left: 60%;"><q><small><small><i>Экспедиция к Проксиме Центавра, организованная Фондом Джордана в 2119 году, была первой в истории попыткой достичь ближайших звезд нашей Галактики. О судьбе, постигшей экспедицию, можно только догадываться...</i></small></small> <br>
+        <small><small>Фрэнк Бак. Романтики современной астрографии, изд-во Люкс Лимитед</small></small></q></div>
         <p class="clear"><br /></p>
         <p><article id="link1">ЧАСТЬ I. ВСЕЛЕННАЯ</article><br /></p>
         <p>— Осторожно! Мьют!<br /></p>        
