cosmetic fixes, smooth scrolling, cleaning

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>AK-concurs</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Geo:ital@0;1&display=swap" rel="stylesheet">
@@ -18,10 +18,10 @@
 
       <header class="site clearfix">
         <div class="col one">
-          <img src="./img/CBET-Logo.png" alt="CBET" width="740" height="729" id="logo-v">
+          <a alt="CBET" href="index.html"><img src="./img/CBET-Logo.png" alt="CBET" width="740" height="729" id="logo-v"></a>
         </div>
         <div class="col two clear">
-          <h4><article id="link4">ЗАВОД МИКРОМАШИНОСТРОЕНИЯ. ЭВМ(1-ИМ.Л) <br> <b>С</b>верхскоростной <b>В</b>ычислительный эл<b>Е</b>ктронный <b>Т</b>ерминал  (СВЕТ)</article></h4>
+          <h4><article id="link4">ЗАВОД Электронпрогресс. ЭВМ(1-ИМ.Л) <br> <b>С</b>верхскоростной <b>В</b>ычислительный эл<b>Е</b>ктронный <b>Т</b>ерминал  (СВЕТ)</article></h4>
           <span>----------------------------------------</span> <br>
           <span>СВЕТ мод. 1.0.0</span>
           <span>(c)2025 1-Л зав.Микромашстрой</span> <br>
@@ -32,25 +32,38 @@
       <nav class="site">
         <ul>
           <li><a href="https://ru.wikipedia.org/wiki/%D0%A5%D0%B0%D0%B9%D0%BD%D0%BB%D0%B0%D0%B9%D0%BD,_%D0%A0%D0%BE%D0%B1%D0%B5%D1%80%D1%82" target="_blank" title="WIKI">РОБЕРТ ХАЙНЛАЙН</a></li>
-          <li><a href="https://epizodsspace.airbase.ru/bibl/v_s/1977/1/pasynki1.html" target="_blank" title="читать полностью">Пасынки Вселенной</a></li>
+          <li><a href="https://epizodsspace.airbase.ru/bibl/v_s/1977/1/pasynki1.html" target="_blank" title="читать полностью"><b>Пасынки Вселенной</b></a></li>
         </ul>
       </nav>
+
       <div class="left">
         <ul>
           <li>
             <a class="link1" href="#link1">Часть 1</a>
+            <ol>
+              <li><a class="note1" href="#note1">├метка 1</a></li>
+              <li><a class="note2" href="#note2">└метка 2</a></li>
+            </ol>
           </li>
           <li>
             <a class="link2" href="#link2">Часть 2</a>
+            <ol>
+              <li><a class="note3" href="#note3">├метка 3</a></li>
+              <li><a class="note4" href="#note4">└метка 4</a></li>
+            </ol>
           </li>
           <li>
             <a class="link3" href="#link3">Часть 3</a>
+            <ol>
+              <li><a class="note5" href="#note5">└метка 5</a></li>
+            </ol>
           </li>
           <li>
             <a class="link5" href="#link5">С<i>e</i>тка <b>.</b>.|</a>
           </li>
         </ul>
       </div>
+
       <div class="right">
         <div style="margin-left: 60%;"><q><small><small><i>Экспедиция к Проксиме Центавра, организованная Фондом Джордана в 2119 году, была первой в истории попыткой достичь ближайших звезд нашей Галактики. О судьбе, постигшей экспедицию, можно только догадываться...</i></small></small> <br>
         <small><small>Фрэнк Бак. Романтики современной астрографии, изд-во Люкс Лимитед</small></small></q></div>
@@ -69,7 +82,7 @@
         <p>— Слушай, Хью, — Махони дернул Хойланда за руку. — Давай уйдем отсюда. Мы так высоко никогда еще не забирались. Я хочу вернуться туда, где нормальная тяжесть.<br />
           Хойланд, сжимая рукоять ножа, жадно смотрел на люк, в котором скрылся противник.<br /></p>
         <p>— Ладно, малыш, — согласился он. — Впереди дорога долгая, пора возвращаться.<br /></p>
-        <p>Он повернулся и пошел к люку, через который они выбрались на этот ярус. Вверх приходилось подниматься по крутым лестницам, но сейчас Хью просто оттолкнулся от крышки люка и начал плавно спускаться на палубу пятнадцатью футами ниже. Тайлер и Махони последовали за ним. Так они продвигались вниз — через десятки люков и зловещих, слабо освещенных палуб. С каждым разом прыжок чуть-чуть ускорялся, и приземлялись они чуть-чуть тяжелее. В конце концов Махони не выдержал:<br /></p>
+        <p><article id="note1"><b>метка 1</b></article>Он повернулся и пошел к люку, через который они выбрались на этот ярус. Вверх приходилось подниматься по крутым лестницам, но сейчас Хью просто оттолкнулся от крышки люка и начал плавно спускаться на палубу пятнадцатью футами ниже. Тайлер и Махони последовали за ним. Так они продвигались вниз — через десятки люков и зловещих, слабо освещенных палуб. С каждым разом прыжок чуть-чуть ускорялся, и приземлялись они чуть-чуть тяжелее. В конце концов Махони не выдержал:<br /></p>
         <p>— Хью, хватит прыгать. Я ногу зашиб. Давай пойдем лестницами.<br /></p>
         <p>— Ладно, но так будет дольше. Кстати, далеко нам еще?<br /></p>
         <p>— Отсюда до фермы палуб семьдесят, — ответил Тайлер.<br /></p>
@@ -92,7 +105,7 @@
         <p>— Был наверху. Добрались почти до невесомости. А потом мьют чуть не разнес мне череп.<br /></p>
         <p>Дядя хмыкнул:<br /></p>
         <p>— Свернешь себе шею в этих трущобах, парень. Ты бы лучше занимался хозяйством и ждал дня, когда я умру и оставлю его тебе.<br /></p>
-        <p>На лице Хью появилось упрямое выражение.<br /></p>
+        <p><article id="note2"><b>метка 2</b></article>На лице Хью появилось упрямое выражение.<br /></p>
         <p> — А вам разве не любопытно, дядя?<br /></p>
         <p>— Мне? Ну, когда я был молодым, тоже много шатался. Прошел всю Главную дорогу, потом вернулся обратно в деревню. И в Темном Секторе бывал, меня там мьюты разве что за пятки не хватали. Видишь шрам?<br /></p>
         <p>Хью видел этот шрам не в первый раз, а дядин рассказ уже наскучил ему до тошноты. Подумаешь, прошел однажды Главную дорогу! Сам-то Хью хотел побывать везде, все увидеть и все узнать. Взять хотя бы верхние ярусы. Если человеку не дано так высоко забираться, то с чего Джордану было их создавать?<br /></p>
@@ -115,9 +128,9 @@
         <p>Обшаривая столы исчезнувшего Главного инженера, Старший помощник Капитана-Помазанника Финеас Нарби обнаружил, к своему изумлению, что Билл Эртц тайком хранил парочку Ненужных книг. Были у него в столе, конечно, и обычные Священные книги, такие, как бесценные «Профилактика вспомогательного Конвертера» и «Справочник систем освещения и кондиционирования звездолета «Авангард» — самые священные из всех Священных книг: на них стояла печать самого Джордана, и они по праву могли принадлежать только Главному инженеру.</p>
         <p>Нарби считал себя скептиком и рационалистом. Вера в Джордана — дело праведное и благое... для Экипажа. И все же слова «Фонд Джордана», оттиснутые штемпелем на титульном листе, будили в душе трепет, которого он не помнил с тех пор, как был удостоен сана Ученого.</p>
         <p>Нарби восхищался прекрасным четким шрифтом старинных книг. Вот ведь были писцы у древних! Не то, что современные неряхи, которым и двух букв одинаково ровно не написать.</p>
-        <p>Он решил обязательно изучить подробно эти ценнейшие справочники инженерного ведомства, прежде чем передать их преемнику Эртца. Было бы очень полезно, решил Нарби, избавиться от необходимости слепо полагаться на слова Главного инженера, не зависеть от него, когда он, Нарби, сам станет Капитаном. Нарби не очень почитал Инженеров в основном потому, что сам инженерными способностями не блистал. Когда он стал Ученым, одним из тех, кто охранял духовное и материальное благополучие Корабля, когда дал клятву служить верой и правдой делу Джордана, то быстро понял, что более склонен к руководству кадрами и разработке политической линии, чем к обслуживанию Конвертера. Он занимал пасты клерка, администратора деревни, секретаря Совета, кадровика и, наконец, поднялся до должности Старшего помощника самого Капитана-Помазанника. Это место он получил сразу же после таинственного происшествия, значительно сократившего жизнь его предшественника.</p>
+        <p><article id="note3"><b>метка 3</b></article>Он решил обязательно изучить подробно эти ценнейшие справочники инженерного ведомства, прежде чем передать их преемнику Эртца. Было бы очень полезно, решил Нарби, избавиться от необходимости слепо полагаться на слова Главного инженера, не зависеть от него, когда он, Нарби, сам станет Капитаном. Нарби не очень почитал Инженеров в основном потому, что сам инженерными способностями не блистал. Когда он стал Ученым, одним из тех, кто охранял духовное и материальное благополучие Корабля, когда дал клятву служить верой и правдой делу Джордана, то быстро понял, что более склонен к руководству кадрами и разработке политической линии, чем к обслуживанию Конвертера. Он занимал пасты клерка, администратора деревни, секретаря Совета, кадровика и, наконец, поднялся до должности Старшего помощника самого Капитана-Помазанника. Это место он получил сразу же после таинственного происшествия, значительно сократившего жизнь его предшественника.</p>
         <p>Решение заняться инженерными делами до избрания нового Главного инженера напомнило ему о необходимости подобрать подходящую кандидатуру. В обычной ситуации на пост Главного инженера, ушедшего в Полет, назначался старший Вахтенный офицер, но Вахтенный Морт Тайлер сам ушел в Полет — его хладный труп нашли в коридоре, по которому отступали мьюты, освободившие еретика Хью Хойланда. Вопрос о кандидатуре оставался открытым, и Нарби еще не решил, кого рекомендовать Капитану.</p>
-        <p>Одно было ясно — новый Главный инженер не должен обладать таким чрезмерно развитым чувством инициативы, как Эртц. Нарби отдавал последнему должное и признавал его заслуги в отличной организации подготовки Экипажа к намеченному истреблению мьютов, но именно эти его качества хорошего организатора и руководителя беспокоили Нарби — они могли сделать Эртца слишком сильным кандидатом на пост Капитана в случае... Наедине с самим собой Нарби мог признаться, что жизнь нынешнего Капитана так неоправданно затянулась только потому, что он, Нарби, не был на все сто процентов уверен, кого Совет изберет следующим Капитаном — Эртца или его. А сейчас старому Капитану было бы в самый раз отправиться к Джордану. Старый толстый дурак давно уже отжил свое, и толку от него... Нарби просто устал улещивать старика, чтобы тот отдавал нужные распоряжения. Да, если перед Советом встанет необходимость выбора нового Капитана именно в настоящий момент, то подходящая кандидатура будет только одна...</p>
+        <p><article id="note4"><b>метка 4</b></article>Одно было ясно — новый Главный инженер не должен обладать таким чрезмерно развитым чувством инициативы, как Эртц. Нарби отдавал последнему должное и признавал его заслуги в отличной организации подготовки Экипажа к намеченному истреблению мьютов, но именно эти его качества хорошего организатора и руководителя беспокоили Нарби — они могли сделать Эртца слишком сильным кандидатом на пост Капитана в случае... Наедине с самим собой Нарби мог признаться, что жизнь нынешнего Капитана так неоправданно затянулась только потому, что он, Нарби, не был на все сто процентов уверен, кого Совет изберет следующим Капитаном — Эртца или его. А сейчас старому Капитану было бы в самый раз отправиться к Джордану. Старый толстый дурак давно уже отжил свое, и толку от него... Нарби просто устал улещивать старика, чтобы тот отдавал нужные распоряжения. Да, если перед Советом встанет необходимость выбора нового Капитана именно в настоящий момент, то подходящая кандидатура будет только одна...</p>
         <p>Нарби захлопнул книгу. Решение было принято. Замыслив убрать Капитана, Нарби отнюдь не испытывал ни стыда, ии угрызений совести, ни мыслей о грехе и предательстве. Капитана он презирал, но никаких злых чувств к нему никогда не испытывал, так что в его намерениях убить Капитана не было и следа личной ненависти или неприязни. Нарби строил свои планы, исходя из самых благородных побуждений государственного деятеля. Он искренне верил, что действует на благо всего Экипажа, что его цель — здравомыслящая администрация, порядок, дисциплина и добрая еда для каждого. Необходимость отправить кое-кого в Полет ради достижения великих целей и всеобщего блага не вызывала у него ни малейшего сожаления, и зла никакого к этим людям он не питал.</p> <br> <br>
         <p><article id="link3">ЧАСТЬ III. ПОСАДКА</article></p> <br> <br>
         <p>Удача, инженерный гений предков и крохи знания. Повезло, что Корабль оказался у звезды с планетной системой, повезло, что они смогли спустить шлюпку; повезло, что Хью сумел разобраться в пульте управления, прежде чем они затерялись в глубоком космосе и умерли от голода.</p>
@@ -165,7 +178,7 @@
         <p>— Прыгай!</p>
         <p>Алан одним прыжком присоединился к ним.</p>
         <p>— Вот это да! — присвистнул он.</p>
-        <p>Их первая вылазка закончилась футах в пятидесяти от Корабля. Они шли, держась кучкой, смотря под ноги, чтобы не споткнуться и не упасть на этой странной неровной палубе. Все было нормально, но Алан поднял голову и вдруг впервые в жизни не увидел потолка над собой. Головокружение и острый приступ агорафобии. Он застонал, закрыл глаза и упал.</p>
+        <p><article id="note5"><b>метка 5</b></article>Их первая вылазка закончилась футах в пятидесяти от Корабля. Они шли, держась кучкой, смотря под ноги, чтобы не споткнуться и не упасть на этой странной неровной палубе. Все было нормально, но Алан поднял голову и вдруг впервые в жизни не увидел потолка над собой. Головокружение и острый приступ агорафобии. Он застонал, закрыл глаза и упал.</p>
         <p>— Что случилось? — спросил Эртц и тоже посмотрел вверх. Приступ свалил и его.</p>
         <p>Хью боролся с головокружением. Страх и боль бросили его на колени, но, упершись рукой в землю, он пытался подняться. Ему было легче — он так долго смотрел на бескрайние просторы планеты в иллюминатор.</p>
         <p>— Алан! — завизжала его жена, высунувшись из люка. — Алан! Вернись!</p>
