improved readability of the main text, cosmetic edits

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
           <a alt="CBET" href="index.html"><img src="./img/CBET-Logo.png" alt="CBET" width="740" height="729" id="logo-v"></a>
         </div>
         <div class="col two clear">
-          <h4><article id="link4">ЗАВОД Электронпрогресс. ЭВМ(1-ИМ.Л) <br> <b>С</b>верхскоростной <b>В</b>ычислительный эл<b>Е</b>ктронный <b>Т</b>ерминал  (СВЕТ)</article></h4>
+          <h4><article id="link4">ЗАВОД ЭВМ Электропрогресс.(1-ИМ.Л) <br> <b>С</b>верхскоростной <b>В</b>ычислительный эл<b>Е</b>ктронный <b>Т</b>ерминал  (СВЕТ)</article></h4>
           <span>----------------------------------------</span> <br>
           <span>СВЕТ мод. 1.0.0</span>
-          <span>(c)2025 1-Л зав.Микромашстрой</span> <br>
-          <span>- Упр. 278502 -</span> <br>
+          <span>(c)1976 1-Л зав.Микромашстрой</span> <br>
+          <span>- Упр. 278502 - авт.функц.</span> <br>
         </div>
       </header>
 
@@ -65,20 +65,22 @@
       </div>
 
       <div class="right">
-        <div style="margin-left: 60%;"><q><small><small><i>Экспедиция к Проксиме Центавра, организованная Фондом Джордана в 2119 году, была первой в истории попыткой достичь ближайших звезд нашей Галактики. О судьбе, постигшей экспедицию, можно только догадываться...</i></small></small> <br>
-        <small><small>Фрэнк Бак. Романтики современной астрографии, изд-во Люкс Лимитед</small></small></q></div>
-        <p class="clear"><br /></p>
-        <p><article id="link1">ЧАСТЬ I. ВСЕЛЕННАЯ</article><br /></p>
-        <p>— Осторожно! Мьют!<br /></p>        
-          <p>Кусок железа врезался в переборку прямо над головой Хью с такой силой, что, не промахнись пращник, пробил бы ее наверняка. Хью Хойланд резко пригнулся, оттолкнулся ногами от пола и, пролетев несколько метров по коридору, выхватил нож. Перевернувшись в воздухе у поворота, он встал на ноги. За поворотом коридор был пуст. Оба товарища догнали его.<br /></p>
-        <p>— Ушел? — спросил Алан Махони.<br /></p>
-        <p>— Ушел, — ответил Хойланд. — Я видел, как он нырнул в люк. Кажется, у него было четыре ноги.<br /></p>
-        <p>— Четыре или две, нам все равно теперь не поймать мьюта, — сказал Морт Тайлер.<br /></p>
-        <p>— Вот еще, ловить его! — воскликнул Махони. — На кой Хафф он нам сдался!<br /></p>
-        <p>— А я был бы не прочь поймать его, чтобы потолковать кое о чем, — ответил Хойланд. — Клянусь Джорданом, возьми он на два дюйма ниже, быть бы мне в Конвертере.<br /></p>
-        <p>— Перестаньте через каждые два слова богохульничать, — укоризненно сказал Тайлер. — Слышал бы вас Капитан! — И он благоговейно приложил ладонь ко лбу, как и подобает при упоминании Капитана.<br /></p>
-        <p>— Джордана ради, — резко ответил Хойланд, — не умничай, Морт. Тебя еще не произвели в ученые, а я вряд ли менее благочестив, чем ты, но не вижу греха в том, чтобы иногда дать выход чувствам. Даже ученые так выражаются в сердцах, я сам слышал.<br /></p>
-        <p>Тайлер открыл было рот, но промолчал.<br /></p>
+        <div style="margin-left: 60%;">
+          <small><small><i>Экспедиция к Проксиме Центавра, организованная Фондом Джордана в 2119 году, была первой в истории попыткой достичь ближайших звезд нашей Галактики. О судьбе, постигшей экспедицию, можно только догадываться...</i></small></small><br>
+          <small><small>Фрэнк Бак. Романтики современной астрографии, изд-во Люкс Лимитед</small></small></q>
+        </div>
+        <p class="clear"><br></p>
+        <p><article id="link1">ЧАСТЬ I. ВСЕЛЕННАЯ</article><br></p>
+        <p>— Осторожно! Мьют!<br></p>        
+        <p>Кусок железа врезался в переборку прямо над головой Хью с такой силой, что, не промахнись пращник, пробил бы ее наверняка. Хью Хойланд резко пригнулся, оттолкнулся ногами от пола и, пролетев несколько метров по коридору, выхватил нож. Перевернувшись в воздухе у поворота, он встал на ноги. За поворотом коридор был пуст. Оба товарища догнали его.<br></p>
+        <p>— Ушел? — спросил Алан Махони.<br></p>
+        <p>— Ушел, — ответил Хойланд. — Я видел, как он нырнул в люк. Кажется, у него было четыре ноги.<br></p>
+        <p>— Четыре или две, нам все равно теперь не поймать мьюта, — сказал Морт Тайлер.<br></p>
+        <p>— Вот еще, ловить его! — воскликнул Махони. — На кой Хафф он нам сдался!<br></p>
+        <p>— А я был бы не прочь поймать его, чтобы потолковать кое о чем, — ответил Хойланд. — Клянусь Джорданом, возьми он на два дюйма ниже, быть бы мне в Конвертере.<br></p>
+        <p>— Перестаньте через каждые два слова богохульничать, — укоризненно сказал Тайлер. — Слышал бы вас Капитан! — И он благоговейно приложил ладонь ко лбу, как и подобает при упоминании Капитана.<br></p>
+        <p>— Джордана ради, — резко ответил Хойланд, — не умничай, Морт. Тебя еще не произвели в ученые, а я вряд ли менее благочестив, чем ты, но не вижу греха в том, чтобы иногда дать выход чувствам. Даже ученые так выражаются в сердцах, я сам слышал.<br></p>
+        <p>Тайлер открыл было рот, но промолчал.<br></p>
         <p>— Слушай, Хью, — Махони дернул Хойланда за руку. — Давай уйдем отсюда. Мы так высоко никогда еще не забирались. Я хочу вернуться туда, где нормальная тяжесть.<br />
           Хойланд, сжимая рукоять ножа, жадно смотрел на люк, в котором скрылся противник.<br /></p>
         <p>— Ладно, малыш, — согласился он. — Впереди дорога долгая, пора возвращаться.<br /></p>
