добавлена анимация черезстрочных искажений текста

--- a/index.html
+++ b/index.html
@@ -81,52 +81,52 @@
         <p>— Перестаньте через каждые два слова богохульничать, — укоризненно сказал Тайлер. — Слышал бы вас Капитан! — И он благоговейно приложил ладонь ко лбу, как и подобает при упоминании Капитана.<br></p>
         <p>— Джордана ради, — резко ответил Хойланд, — не умничай, Морт. Тебя еще не произвели в ученые, а я вряд ли менее благочестив, чем ты, но не вижу греха в том, чтобы иногда дать выход чувствам. Даже ученые так выражаются в сердцах, я сам слышал.<br></p>
         <p>Тайлер открыл было рот, но промолчал.<br></p>
-        <p>— Слушай, Хью, — Махони дернул Хойланда за руку. — Давай уйдем отсюда. Мы так высоко никогда еще не забирались. Я хочу вернуться туда, где нормальная тяжесть.<br />
-          Хойланд, сжимая рукоять ножа, жадно смотрел на люк, в котором скрылся противник.<br /></p>
-        <p>— Ладно, малыш, — согласился он. — Впереди дорога долгая, пора возвращаться.<br /></p>
-        <p><article id="note1"><b>метка 1</b></article>Он повернулся и пошел к люку, через который они выбрались на этот ярус. Вверх приходилось подниматься по крутым лестницам, но сейчас Хью просто оттолкнулся от крышки люка и начал плавно спускаться на палубу пятнадцатью футами ниже. Тайлер и Махони последовали за ним. Так они продвигались вниз — через десятки люков и зловещих, слабо освещенных палуб. С каждым разом прыжок чуть-чуть ускорялся, и приземлялись они чуть-чуть тяжелее. В конце концов Махони не выдержал:<br /></p>
-        <p>— Хью, хватит прыгать. Я ногу зашиб. Давай пойдем лестницами.<br /></p>
-        <p>— Ладно, но так будет дольше. Кстати, далеко нам еще?<br /></p>
-        <p>— Отсюда до фермы палуб семьдесят, — ответил Тайлер.<br /></p>
-        <p>— А ты почем знаешь? — подозрительно спросил Махони.<br /></p>
-        <p>— Знаю, потому что считал, балда ты этакая.<br /></p>
-        <p>— Ну да! Считать умеют только ученые. Ты думаешь, если тебя учат читать и писать, так ты уже все знаешь?<br /></p>
-        <p>Хойланд вмешался, прежде чем спор перерос в ссору:<br /></p>
-        <p>— Заткнись, Алан. Может, он действительно умеет считать. Морт на такие дела мастак. Да и, судя по тяжести, он прав.<br /></p>
-        <p>— А лезвия в моем ноже он посчитать не хочет? — не унимался Алан.<br /></p>
-        <p>— Заткнись, тебе говорят. Ты что, Закона не знаешь? За пределами деревни дуэли запрещены.<br /></p>
-        <p>Они продолжали свой путь в тишине, легко бежали по лестницам, пока возросшая сила тяжести не заставила перейти на шаг. Вскоре показался ярко освещенный ярус, где расстояние между палубами было раза в два больше, чем наверху. Воздух здесь был влажный и теплый.<br /></p>
-        <p>— Наконец-то... — сказал Хью. — Однако я не вижу нашей фермы. Мы, наверное, вышли с другой стороны.<br /></p>
-        <p> — А вон и какой-то фермер, — сказал Тайлер. Сунув мизинцы в рот, он свистнул, а потом крикнул: — Эй, приятель! Куда это мы попали?<br /></p>
-        <p>Крестьянин не спеша оглядел всех троих, потом объяснил, как найти Главную дорогу, ведущую к их деревне. Они прошли с полторы мили энергичным шагом по широкому, довольно оживленному тоннелю. Навстречу им попадались по большей части крестьяне, толкавшие перед собой груженые тележки. Потом они увидели, как в носилках, которые держали четверо здоровенных слуг, с достоинством покачивался ученый. Его оруженосец шествовал впереди, разгоняя с дороги простолюдинов... А вскоре вся тройка пришла в общинную своей деревни — просторное помещение в три палубы высотой. Здесь они разошлись. Хью направился в казармы кадетов — молодых холостяков, живущих отдельно от родителей. Он умылся, потом отправился к дяде, Эдуарду Хойланду, у которого работал за еду. Когда Хью вошел, тетя взглянула на него, но ничего не сказала: женщине подобало хранить молчание.<br /></p>
-        <p>— Привет, Хью, — сказал дядя. — Опять бродил по окрестностям?<br /></p>
-        <p>— Доброй еды, дядя... Конечно, бродил...<br />
-          Эдуард Хойланд, солидный здравомыслящий человек, снисходительно усмехнулся:<br /></p>
-        <p>— Где был и что видел?<br /></p>
-        <p>Тетя бесшумно выскользнула за дверь и вернулась с ужином для Хью, поставила перед ним тарелку, но ему даже и в голову не пришло поблагодарить за заботу. Он проглотил кусок прежде, чем ответить.<br /></p>
-        <p>— Был наверху. Добрались почти до невесомости. А потом мьют чуть не разнес мне череп.<br /></p>
-        <p>Дядя хмыкнул:<br /></p>
-        <p>— Свернешь себе шею в этих трущобах, парень. Ты бы лучше занимался хозяйством и ждал дня, когда я умру и оставлю его тебе.<br /></p>
-        <p><article id="note2"><b>метка 2</b></article>На лице Хью появилось упрямое выражение.<br /></p>
-        <p> — А вам разве не любопытно, дядя?<br /></p>
-        <p>— Мне? Ну, когда я был молодым, тоже много шатался. Прошел всю Главную дорогу, потом вернулся обратно в деревню. И в Темном Секторе бывал, меня там мьюты разве что за пятки не хватали. Видишь шрам?<br /></p>
-        <p>Хью видел этот шрам не в первый раз, а дядин рассказ уже наскучил ему до тошноты. Подумаешь, прошел однажды Главную дорогу! Сам-то Хью хотел побывать везде, все увидеть и все узнать. Взять хотя бы верхние ярусы. Если человеку не дано так высоко забираться, то с чего Джордану было их создавать?<br /></p>
-        <p>Но мысли эти он держал при себе и продолжал есть. Эдуард Хойланд сменил тему:<br /></p>
-        <p>— Мне надо повидать Свидетеля. Джон Блэк заявил, что я ему должен трех свиней. Хочешь пойти со мной?<br /></p>
-        <p>— Да нет, пожалуй. Хотя да, пойду.<br /></p>
-        <p>— Поспешай тогда.<br /></p>
-        <p>По дороге они зашли в казарму, и Хью отпросился идти с дядей по делу.<br /></p>
-        <p>Свидетель жил в маленьком вонючем помещении на краю общинной, где был легкодоступен всем, нуждающимся в его услугах. Он сидел на пороге, ковыряя ногтем в зубах. Его ученик, прыщавый близорукий подросток, сидел на корточках за его спиной.<br /></p>
-        <p>— Доброй еды, — сказал дядя.<br /></p>
-        <p>— И тебе доброй еды, Эдуард Хойланд. Ты пришел по делу или просто составить старику компанию?<br /></p>
-        <p>— И то и другое, — дипломатично ответил дядя, а затем изложил суть своего визита.<br /></p>
-        <p>— Так в чем проблема? — сказал Свидетель. — В контракте ведь ясно сказано:<br /></p>
+        <p>— Слушай, Хью, — Махони дернул Хойланда за руку. — Давай уйдем отсюда. Мы так высоко никогда еще не забирались. Я хочу вернуться туда, где нормальная тяжесть.<br>
+          Хойланд, сжимая рукоять ножа, жадно смотрел на люк, в котором скрылся противник.<br></p>
+        <p>— Ладно, малыш, — согласился он. — Впереди дорога долгая, пора возвращаться.<br></p>
+        <p><article id="note1"><b>метка 1</b></article>Он повернулся и пошел к люку, через который они выбрались на этот ярус. Вверх приходилось подниматься по крутым лестницам, но сейчас Хью просто оттолкнулся от крышки люка и начал плавно спускаться на палубу пятнадцатью футами ниже. Тайлер и Махони последовали за ним. Так они продвигались вниз — через десятки люков и зловещих, слабо освещенных палуб. С каждым разом прыжок чуть-чуть ускорялся, и приземлялись они чуть-чуть тяжелее. В конце концов Махони не выдержал:<br></p>
+        <p>— Хью, хватит прыгать. Я ногу зашиб. Давай пойдем лестницами.<br></p>
+        <p>— Ладно, но так будет дольше. Кстати, далеко нам еще?<br></p>
+        <p>— Отсюда до фермы палуб семьдесят, — ответил Тайлер.<br></p>
+        <p>— А ты почем знаешь? — подозрительно спросил Махони.<br></p>
+        <p>— Знаю, потому что считал, балда ты этакая.<br></p>
+        <p>— Ну да! Считать умеют только ученые. Ты думаешь, если тебя учат читать и писать, так ты уже все знаешь?<br></p>
+        <p>Хойланд вмешался, прежде чем спор перерос в ссору:<br></p>
+        <p>— Заткнись, Алан. Может, он действительно умеет считать. Морт на такие дела мастак. Да и, судя по тяжести, он прав.<br></p>
+        <p>— А лезвия в моем ноже он посчитать не хочет? — не унимался Алан.<br></p>
+        <p>— Заткнись, тебе говорят. Ты что, Закона не знаешь? За пределами деревни дуэли запрещены.<br></p>
+        <p>Они продолжали свой путь в тишине, легко бежали по лестницам, пока возросшая сила тяжести не заставила перейти на шаг. Вскоре показался ярко освещенный ярус, где расстояние между палубами было раза в два больше, чем наверху. Воздух здесь был влажный и теплый.<br></p>
+        <p>— Наконец-то... — сказал Хью. — Однако я не вижу нашей фермы. Мы, наверное, вышли с другой стороны.<br></p>
+        <p> — А вон и какой-то фермер, — сказал Тайлер. Сунув мизинцы в рот, он свистнул, а потом крикнул: — Эй, приятель! Куда это мы попали?<br></p>
+        <p>Крестьянин не спеша оглядел всех троих, потом объяснил, как найти Главную дорогу, ведущую к их деревне. Они прошли с полторы мили энергичным шагом по широкому, довольно оживленному тоннелю. Навстречу им попадались по большей части крестьяне, толкавшие перед собой груженые тележки. Потом они увидели, как в носилках, которые держали четверо здоровенных слуг, с достоинством покачивался ученый. Его оруженосец шествовал впереди, разгоняя с дороги простолюдинов... А вскоре вся тройка пришла в общинную своей деревни — просторное помещение в три палубы высотой. Здесь они разошлись. Хью направился в казармы кадетов — молодых холостяков, живущих отдельно от родителей. Он умылся, потом отправился к дяде, Эдуарду Хойланду, у которого работал за еду. Когда Хью вошел, тетя взглянула на него, но ничего не сказала: женщине подобало хранить молчание.<br></p>
+        <p>— Привет, Хью, — сказал дядя. — Опять бродил по окрестностям?<br></p>
+        <p>— Доброй еды, дядя... Конечно, бродил...<br>
+          Эдуард Хойланд, солидный здравомыслящий человек, снисходительно усмехнулся:<br></p>
+        <p>— Где был и что видел?<br></p>
+        <p>Тетя бесшумно выскользнула за дверь и вернулась с ужином для Хью, поставила перед ним тарелку, но ему даже и в голову не пришло поблагодарить за заботу. Он проглотил кусок прежде, чем ответить.<br></p>
+        <p>— Был наверху. Добрались почти до невесомости. А потом мьют чуть не разнес мне череп.<br></p>
+        <p>Дядя хмыкнул:<br></p>
+        <p>— Свернешь себе шею в этих трущобах, парень. Ты бы лучше занимался хозяйством и ждал дня, когда я умру и оставлю его тебе.<br></p>
+        <p><article id="note2"><b>метка 2</b></article>На лице Хью появилось упрямое выражение.<br></p>
+        <p> — А вам разве не любопытно, дядя?<br></p>
+        <p>— Мне? Ну, когда я был молодым, тоже много шатался. Прошел всю Главную дорогу, потом вернулся обратно в деревню. И в Темном Секторе бывал, меня там мьюты разве что за пятки не хватали. Видишь шрам?<br></p>
+        <p>Хью видел этот шрам не в первый раз, а дядин рассказ уже наскучил ему до тошноты. Подумаешь, прошел однажды Главную дорогу! Сам-то Хью хотел побывать везде, все увидеть и все узнать. Взять хотя бы верхние ярусы. Если человеку не дано так высоко забираться, то с чего Джордану было их создавать?<br></p>
+        <p>Но мысли эти он держал при себе и продолжал есть. Эдуард Хойланд сменил тему:<br></p>
+        <p>— Мне надо повидать Свидетеля. Джон Блэк заявил, что я ему должен трех свиней. Хочешь пойти со мной?<br></p>
+        <p>— Да нет, пожалуй. Хотя да, пойду.<br></p>
+        <p>— Поспешай тогда.<br></p>
+        <p>По дороге они зашли в казарму, и Хью отпросился идти с дядей по делу.<br></p>
+        <p>Свидетель жил в маленьком вонючем помещении на краю общинной, где был легкодоступен всем, нуждающимся в его услугах. Он сидел на пороге, ковыряя ногтем в зубах. Его ученик, прыщавый близорукий подросток, сидел на корточках за его спиной.<br></p>
+        <p>— Доброй еды, — сказал дядя.<br></p>
+        <p>— И тебе доброй еды, Эдуард Хойланд. Ты пришел по делу или просто составить старику компанию?<br></p>
+        <p>— И то и другое, — дипломатично ответил дядя, а затем изложил суть своего визита.<br></p>
+        <p>— Так в чем проблема? — сказал Свидетель. — В контракте ведь ясно сказано:<br></p>
         <p>Джон Блэк дал Эдуарду овес,<br>
         Чтоб Эд свиней ему принес.<br>
         Как поросята подрастут,<br>
         Из них двух Джону отдадут.<br>
-        </p><br />
-        <p><article id="link2">ЧАСТЬ II. ЗДРАВЫЙ СМЫСЛ</article></p><br />
+        </p><br>
+        <p><article id="link2">ЧАСТЬ II. ЗДРАВЫЙ СМЫСЛ</article></p><br>
         <p>Обшаривая столы исчезнувшего Главного инженера, Старший помощник Капитана-Помазанника Финеас Нарби обнаружил, к своему изумлению, что Билл Эртц тайком хранил парочку Ненужных книг. Были у него в столе, конечно, и обычные Священные книги, такие, как бесценные «Профилактика вспомогательного Конвертера» и «Справочник систем освещения и кондиционирования звездолета «Авангард» — самые священные из всех Священных книг: на них стояла печать самого Джордана, и они по праву могли принадлежать только Главному инженеру.</p>
         <p>Нарби считал себя скептиком и рационалистом. Вера в Джордана — дело праведное и благое... для Экипажа. И все же слова «Фонд Джордана», оттиснутые штемпелем на титульном листе, будили в душе трепет, которого он не помнил с тех пор, как был удостоен сана Ученого.</p>
         <p>Нарби восхищался прекрасным четким шрифтом старинных книг. Вот ведь были писцы у древних! Не то, что современные неряхи, которым и двух букв одинаково ровно не написать.</p>
