--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
       <nav class="site">
         <ul>
-          <li><a href="https://ru.wikipedia.org/wiki/%D0%A5%D0%B0%D0%B9%D0%BD%D0%BB%D0%B0%D0%B9%D0%BD,_%D0%A0%D0%BE%D0%B1%D0%B5%D1%80%D1%82" target="_blank" title="WIKI">РОБЕРТ ХАЙНЛАЙН</a></li>
+          <li><a href="#win1" target="" title="">РОБЕРТ ХАЙНЛАЙН ┊⇊┊</a>
           <li><a href="https://epizodsspace.airbase.ru/bibl/v_s/1977/1/pasynki1.html" target="_blank" title="читать полностью"><b>Пасынки Вселенной</b></a></li>
         </ul>
       </nav>
@@ -63,6 +63,25 @@
           </li>
         </ul>
       </div>
+
+      <a href="#x" class="overlay" id="win1"></a>
+      <div class="popup">
+      <img title="" src="./img/portrait.png" width="150" height="150" alt="Heinlein" /> <br>
+        Имя при рождении:	англ. Robert Anson Heinlein <br>
+        Дата рождения:	7 июля 1907 <br>
+        Место рождения:	Батлер, Миссури, США <br>
+        Дата смерти:	8 мая 1988 (80 лет) <br>
+        Место смерти:	Кармел, Калифорния, США <br>
+        Гражданство (подданство): США <br>
+        Образование: Военно-морская академия США (1929) <br>
+        Род деятельности:	прозаик, эссеист, сценарист <br>
+        Годы творчества:	1939—1987 <br>
+        Жанр:	научная фантастика, фэнтези <br>
+      <a href="https://ru.wikipedia.org/wiki/%D0%A5%D0%B0%D0%B9%D0%BD%D0%BB%D0%B0%D0%B9%D0%BD,_%D0%A0%D0%BE%D0%B1%D0%B5%D1%80%D1%82" target="_blank" title="WIKI">WIKI</a>
+      <a class="close"title="Закрыть" href="#close"></a>
+      </div>
+
+
 
       <div class="right">
         <img class="arc" src="./img/ARC-green-small.png" alt="Авангард">
